# IOSpec

./: .gitignore  IOSpec.cabal  LICENSE  README  Setup.lhs  index.html
examples/: Channels.hs  Echo.hs  Queues.hs  Refs.hs  Sudoku.hs
src/Data/: Stream.hs
src/Test/: IOSpec.hs
src/Test/IOSpec/: Concurrent.hs  Fork.hs  IORef.hs  MVar.hs  STM.hs  Surrogate.hs  Teletype.hs  Types.hs  VirtualMachine.hs
