Name:		        IOSpec
Version:        	0.1
License:        	BSD3
License-file:		LICENSE
Author:			Wouter Swierstra
Maintainer:     	Wouter Swierstra <wss@cs.nott.ac.uk>
Homepage:       	http://www.cs.nott.ac.uk/~wss/repos/IOSpec
Synopsis:       	A pure specification of the IO monad.
Description:		At the moment this package consists of three 
			modules:
                          * Teletype: specification of getChar and putChar
			  * IORef: specification of most functions on IORefs.
			  * Concurrent: specification of forkIO and MVars.
			There are several examples included in the examples directory.
Category:       	Test
Build-Depends:  	base, mtl, QuickCheck 
Hs-source-dirs:		src
Extra-source-files:	README
			, examples/Echo.hs
			, examples/IORefProps.hs
			, examples/Queues.hs
			, examples/Channels.hs 
Exposed-modules:	Data.Stream
			, Test.IOSpec
			, Test.IOSpec.Teletype
			, Test.IOSpec.IORef
			, Test.IOSpec.Concurrent
